<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
    <LinearLayout android:orientation="vertical" android:background="?attr/colorSecondaryVariant" android:paddingLeft="56dp" android:paddingTop="70dp" android:paddingRight="56dp" android:paddingBottom="70dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingHorizontal="56dp" android:paddingVertical="70dp">
        <ImageView android:layout_gravity="center_horizontal" android:id="@+id/tickImage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="70dp" android:contentDescription="@string/content_desc_tick_image" app:srcCompat="0x7f070070"/>
        <TextView android:textAppearance="?attr/textAppearanceHeadline2" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="6dp" android:text="@string/checkFailedHeading"/>
        <TextView android:textAppearance="?attr/textAppearanceBody2" android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/checkFailedText"/>
    </LinearLayout>
</ScrollView>
