<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout android:background="@color/white" android:paddingLeft="@dimen/frame_padding_large" android:paddingTop="30dp" android:paddingRight="@dimen/frame_padding_large" android:paddingBottom="30dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingHorizontal="@dimen/frame_padding_large" android:paddingVertical="30dp">
        <TextView android:textAppearance="?attr/textAppearanceHeadline3" android:id="@+id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/aboutThisAppTitle" app:layout_constraintBottom_toTopOf="@+id/textBody" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
        <TextView android:textAppearance="?attr/textAppearanceBody2" android:id="@+id/versionNo" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="@+id/title"/>
        <TextView android:textAppearance="?attr/textAppearanceBody1" android:id="@+id/textBody" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="22dp" android:text="@string/aboutThisAppText" app:layout_constraintBottom_toTopOf="@+id/moreInfoButton" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/title"/>
        <Button android:id="@+id/moreInfoButton" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="44dp" android:text="@string/moreInfoButton" app:layout_constraintBottom_toTopOf="@+id/termsOfUseButton" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textBody"/>
        <Button android:id="@+id/termsOfUseButton" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/termsOfUseButton" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/moreInfoButton"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
