<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@+id/columnGuideline" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.5"/>
    <TextView android:textAppearance="@style/TextAppearance.Detail.Content.Label" android:id="@+id/doseNoLabel" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/doseNoLabel" android:layout_marginEnd="@dimen/detail_table_margin" app:layout_constraintBottom_toTopOf="@+id/doseNo" app:layout_constraintEnd_toStartOf="@+id/columnGuideline" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <TextView android:textAppearance="@style/TextAppearance.Detail.Content.Value" android:id="@+id/doseNo" android:layout_width="0dp" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="@+id/doseNoLabel" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/doseNoLabel"/>
    <TextView android:textAppearance="@style/TextAppearance.Detail.Content.Label" android:id="@+id/countryLabel" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/vaccinationCountryLabel" android:layout_marginStart="@dimen/detail_table_margin" app:layout_constraintBottom_toTopOf="@+id/country" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/columnGuideline" app:layout_constraintTop_toTopOf="0"/>
    <TextView android:textAppearance="@style/TextAppearance.Detail.Content.Value" android:id="@+id/country" android:layout_width="0dp" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="@+id/countryLabel" app:layout_constraintStart_toStartOf="@+id/countryLabel" app:layout_constraintTop_toBottomOf="@+id/countryLabel"/>
    <androidx.constraintlayout.widget.Barrier android:id="@+id/secondRowBarrier" android:layout_width="wrap_content" android:layout_height="wrap_content" app:barrierDirection="3" app:barrierMargin="16dp" app:constraint_referenced_ids="doseNo,country"/>
    <TextView android:textAppearance="@style/TextAppearance.Detail.Content.Label" android:id="@+id/dateLabel" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/vaccinationDateLabel" app:layout_constraintBottom_toTopOf="@+id/date" app:layout_constraintEnd_toEndOf="@+id/doseNoLabel" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/secondRowBarrier"/>
    <TextView android:textAppearance="@style/TextAppearance.Detail.Content.Value" android:id="@+id/date" android:layout_width="0dp" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="@+id/doseNoLabel" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/dateLabel"/>
    <TextView android:textAppearance="@style/TextAppearance.Detail.Content.Label" android:id="@+id/adminCentreLabel" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/adminCentreLabel" app:layout_constraintBottom_toTopOf="@+id/adminCentre" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="@+id/countryLabel" app:layout_constraintTop_toBottomOf="@+id/secondRowBarrier"/>
    <TextView android:textAppearance="@style/TextAppearance.Detail.Content.Value" android:id="@+id/adminCentre" android:layout_width="0dp" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@+id/batchNoLabel" app:layout_constraintEnd_toEndOf="@+id/countryLabel" app:layout_constraintStart_toStartOf="@+id/countryLabel" app:layout_constraintTop_toBottomOf="@+id/adminCentreLabel"/>
    <TextView android:textAppearance="@style/TextAppearance.Detail.Content.Label" android:id="@+id/batchNoLabel" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/batchNoLabel" app:layout_constraintEnd_toEndOf="@+id/countryLabel" app:layout_constraintStart_toStartOf="@+id/countryLabel" app:layout_constraintTop_toBottomOf="@+id/adminCentre"/>
    <TextView android:textAppearance="@style/TextAppearance.Detail.Content.Value" android:id="@+id/batchNo" android:layout_width="0dp" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="@+id/countryLabel" app:layout_constraintStart_toStartOf="@+id/countryLabel" app:layout_constraintTop_toBottomOf="@+id/batchNoLabel"/>
</androidx.constraintlayout.widget.ConstraintLayout>
