<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:filterTouchesWhenObscured="true">
    <include android:id="@+id/warningBanner" android:layout_width="match_parent" android:layout_height="wrap_content" layout="@layout/warning_banner"/>
    <View android:id="@+id/bannerDivider" android:background="@color/colorText" android:layout_width="match_parent" android:layout_height="1dp"/>
    <include android:id="@+id/specimenBanner" android:layout_width="match_parent" android:layout_height="wrap_content" layout="@layout/specimen_banner"/>
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout android:background="?attr/colorSecondaryVariant" android:padding="@dimen/frame_padding" android:layout_width="match_parent" android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/header" android:background="@drawable/confirmation_panel" android:paddingLeft="@dimen/frame_padding_large" android:paddingTop="@dimen/frame_padding" android:paddingRight="@dimen/frame_padding_large" android:paddingBottom="@dimen/frame_padding" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingHorizontal="@dimen/frame_padding_large" android:paddingVertical="@dimen/frame_padding" app:layout_constraintBottom_toTopOf="@+id/name" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
                <ImageView android:id="@+id/tickImage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/content_desc_tick_image" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:srcCompat="0x7f07007e"/>
                <TextView android:textAppearance="@style/TextAppearance.Summary.Confirmation1" android:id="@+id/confirmationPrimaryLabel" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/summary_primary" android:layout_marginStart="20dp" app:layout_constraintBottom_toTopOf="@+id/confirmationSecondaryLabel" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/tickImage" app:layout_constraintTop_toTopOf="0"/>
                <TextView android:textAppearance="@style/TextAppearance.Summary.Confirmation2" android:id="@+id/confirmationSecondaryLabel" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/summary_secondary" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="@+id/confirmationPrimaryLabel" app:layout_constraintTop_toBottomOf="@+id/confirmationPrimaryLabel"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView android:textAppearance="?attr/textAppearanceHeadline5" android:id="@+id/name" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="26dp" android:layout_marginBottom="12dp" android:layout_marginStart="@dimen/horizontal_margin" app:layout_constraintBottom_toTopOf="@+id/dobLabel" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/header"/>
            <TextView android:textAppearance="@style/TextAppearance.Summary.Field1.Label" android:id="@+id/dobLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dobLabel" android:layout_marginStart="@dimen/horizontal_margin" app:layout_constraintBottom_toTopOf="@+id/dob" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/name"/>
            <TextView android:textAppearance="@style/TextAppearance.Summary.Field1" android:id="@+id/dob" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="@dimen/horizontal_margin" app:layout_constraintBottom_toTopOf="@+id/vaccineData" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/dobLabel"/>
            <TextView android:textAppearance="@style/TextAppearance.Summary.Field1.Label" android:id="@+id/sexLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sexLabel" android:layout_marginStart="@dimen/horizontal_margin" app:layout_constraintBaseline_toBaselineOf="@+id/dobLabel" app:layout_constraintEnd_toStartOf="@+id/passportNoLabel" app:layout_constraintStart_toEndOf="@+id/dobLabel"/>
            <TextView android:textAppearance="@style/TextAppearance.Summary.Field1" android:id="@+id/sex" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBaseline_toBaselineOf="@+id/dob" app:layout_constraintStart_toStartOf="@+id/sexLabel" app:layout_constraintTop_toBottomOf="@+id/dobLabel"/>
            <TextView android:textAppearance="@style/TextAppearance.Summary.Field1.Label" android:id="@+id/passportNoLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/passportNoLabel" android:layout_marginEnd="@dimen/horizontal_margin" app:layout_constraintBaseline_toBaselineOf="@+id/dobLabel" app:layout_constraintEnd_toEndOf="0"/>
            <TextView android:textAppearance="@style/TextAppearance.Summary.Field1" android:id="@+id/passportNo" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBaseline_toBaselineOf="@+id/dob" app:layout_constraintStart_toStartOf="@+id/passportNoLabel"/>
            <androidx.recyclerview.widget.RecyclerView android:id="@+id/vaccineData" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:nestedScrollingEnabled="false" app:layoutManager="LinearLayoutManager" app:layout_constraintBottom_toTopOf="@+id/uvci" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/dob"/>
            <TextView android:textAppearance="@style/TextAppearance.Summary.Field4" android:id="@+id/uvci" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:layout_marginStart="@dimen/horizontal_margin" app:layout_constraintBottom_toTopOf="@+id/issuedBy" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/vaccineData"/>
            <TextView android:textAppearance="@style/TextAppearance.Summary.Field4" android:id="@+id/issuedBy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="@dimen/horizontal_margin" app:layout_constraintBottom_toTopOf="@+id/viewDetailsButton" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/uvci"/>
            <Button android:id="@+id/viewDetailsButton" android:paddingLeft="32dp" android:paddingRight="32dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/viewDetailsButton" android:paddingHorizontal="32dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/issuedBy"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>
